--- a/Css/home_style.css
+++ b/Css/home_style.css
@@ -6,7 +6,7 @@
 .download_section{
     width: 100%;
     height: 60vh;
-    background-image: url(../Assests/Home/Bg_Banner.png);
+    background-image: linear-gradient(to top, #874669, #5E4452 , rgb(0, 0, 0));
     background-size: contain;
     background-position: center;
     position: relative;
@@ -21,6 +21,14 @@
     position: absolute;
     width: 35%;
     z-index: 0;
+}
+
+.banner_best_agent{
+    content: url(../Assests/Agent/Cloak.png);
+    position: absolute;
+    width: 35%;
+    left: -5%;
+    bottom: -25%;
 }
 
 .banner_desc{
@@ -40,10 +48,15 @@
     background-color: black;
     color: white;
     text-transform: uppercase;
-    font-family: Inter;
     font-size: 1.3rem;
     font-weight: 600;
-    transition: 0.3s ease-in-out;
+    transition: 0.3s ease;
+}
+
+.button_play_now:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 0 0 .5rem black;
 }
 
 .news_part{
@@ -53,7 +66,6 @@
 
 .news_section_title{
     width: 100%;
-    font-family: Inter;
     align-items: center;
     justify-content: space-between;
     padding: 1rem 0rem 1rem 0rem;
@@ -105,7 +117,6 @@
     width: 100%;
     flex-direction: column;
     padding-top: .25rem;
-    font-family: Inter;
 }
 
 .news_text h3{
@@ -125,16 +136,12 @@
     font-weight: 500;
 }
 
-.best_agent_temp{
-    width: 100%;
-    height: 650px;
-    box-sizing: content-box;
-}
-
-.best_agent_temp img{
-    content: url(../Assests/Home/Best_Agent_Banner.png);
-    width: 100%;
-    height: 100%;
+.long-line{
+    width: 90%;
+    justify-self: center;
+    height: 2PX;
+    background-color: black;
+    margin-top: 1rem;
 }
 
 .Home_to_Map{
@@ -150,7 +157,6 @@
 }
 
 .HTM_text{
-    font-family: Inter;
     flex-direction: column;
     text-align: left;
     justify-content: start;
@@ -180,12 +186,25 @@
     color: white;
     text-transform: uppercase;
     font-weight: 500;
+    transition: 0.3s ease;
+}
+
+.HTM_text a:hover{
+    background-color: white;
+    color: #CA2828;
+    box-shadow: 0 0 .5rem black;
 }
 
 @media screen and (max-width : 1000px) {
     .download_section{
         height: 30vh;
         background-size: cover;
+    }
+
+    .banner_best_agent{
+        width: 40%;
+        left: -10%;
+        bottom: -10%;
     }
 
     .banner_logo_img{
@@ -217,6 +236,12 @@
 
     .banner_logo_img{
         width: 60%;
+    }
+
+    .banner_best_agent{
+        width: 50%;
+        left: -15%;
+        bottom: -15%;
     }
 
     .banner_logo_name{
