--- a/Css/news_style.css
+++ b/Css/news_style.css
@@ -13,9 +13,10 @@
     flex-direction: column;
 }
 
-@media  screen and (max-width : 820px) {
+@media  screen and (max-width : 1000px) {
     .news_section{
         grid-template-columns: 45% 45%;
+        height: max-content;
     }
     body{
         min-height: 100vh;
