--- a/Css/home_style.css
+++ b/Css/home_style.css
@@ -4,6 +4,7 @@
 }
 
 .download_section{
+    margin-top: 10vh;
     width: 100%;
     height: 60vh;
     background-image: linear-gradient(to top, #3b383a, #2a2a2a , rgb(0, 0, 0));
